# cprogram

./: .gitgnore  .gitignore  CMakeLists.txt
run/: makefifoRead  makefifoWrite  mq_open_method  output  producers  production  shm_process  singleProcess
src/: main.c
src/headers/: hello.h
src/methods/: father_son_mq.test.c  fifoTest.c  fopen.c  process.c  secondFloor.c  sharedMemory.c  sysCall.c
src/methods/production/: producers.c  production.c
